--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,8 @@
-<header class="page__header">
-  <h1>TÍTULO</h1>
+<header class="header">
+  <h1 class="header__title">Encuentra a tu personaje favorito</h1>
+  <img class="header__img" src="./images/castillo.jpg" alt="Fotografía del castillo de Disney">
+  <form class="header__form" action="">
+    <input class="header__form__input" type="text" placeholder="Ej. Mickey Mouse">
+    <button>Buscar</button>
+  </form>
 </header>
