--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,3 +1,9 @@
 <main class="page__main">
-  <p>Crear rama DEV</p>
+  <h3>Personajes</h3>
+  <ul>
+    <li>
+      <img src="" alt="Imagen personaje">
+      <h4>Nombre personaje</h4>
+    </li>
+  </ul>
 </main>
