--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,5 +1,20 @@
-.page__header {
+.header {
   display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 3rem;
+  flex-direction: column;
+  align-items: center;
+    margin-bottom: 3rem;
+  &__title {
+    text-align: center;
+  }
+  &__img {
+    width: 100%;
+  }
+  &__form {
+    background-color: $color-secondary;
+    width: 70%;
+    position: relative;
+    &__input {
+      width: 80%;
+    }
+  }
 }
