Add header's css

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,7 @@
 // fonts
 $font-main: 'Roboto', sans-serif;
+$font-title: 'Roboto Slab', serif;
 
 // colors
-$color-bg: #ff5eb1;
+$color-bg: #ff6eb2;
 $color-secondary: #ffffff;
