--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,10 @@
 <header class="header">
   <h1 class="header__title">Encuentra a tu personaje favorito</h1>
-  <img class="header__img" src="./images/castillo.jpg" alt="Fotografía del castillo de Disney">
+  <div class="header__img">
+    <img class="header__img__content" src="./images/castillo.jpg" alt="Fotografía del castillo de Disney">
+  </div>
   <form class="header__form" action="">
     <input class="header__form__input" type="text" placeholder="Ej. Mickey Mouse">
-    <button>Buscar</button>
+    <button class="header__form__btn">Buscar</button>
   </form>
 </header>
