--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,19 +2,52 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-    margin-bottom: 3rem;
+  margin-bottom: 3rem;
   &__title {
+    width: 100%;
     text-align: center;
+    font-family: $font-title;
+    font-weight: 700;    
+    padding: 10px;
+    color: $color-bg;
+    border-bottom: solid $color-bg 3px;
   }
   &__img {
     width: 100%;
+    height: 50vh;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &__content{
+      width: 100%;
+    }
   }
   &__form {
     background-color: $color-secondary;
     width: 70%;
     position: relative;
+    bottom: 35px;
+    box-shadow: 0px 5px 50px rgb(114, 114, 114);
+    display: flex;
+    gap: 10px;
+    padding: 20px;
     &__input {
       width: 80%;
+      height: 30px;
+      border-radius: 5px;
+      border: solid 1px $color-bg;  
+      padding: 10px;
+    }
+    &__btn {
+      width: 20%;
+      background-color: $color-bg;
+      border: none;
+      color: $color-secondary;
+      font-family: $font-main;
+      font-weight: 400;
+      font-size: 14px;
+      border-radius: 5px;
     }
   }
 }
