--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
   <p class="footer__text">Todos los derechos reservados
-    <a href="https://adalab.es">©Adalab 2024</a>
+    <a class="footer__link" href="https://adalab.es">©Adalab 2024</a>
   </p>
 </footer>
