--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,9 +1,20 @@
-<main class="page__main">
-  <h3>Personajes</h3>
-  <ul>
-    <li>
-      <img src="" alt="Imagen personaje">
-      <h4>Nombre personaje</h4>
-    </li>
-  </ul>
+<main class="main">
+  <section class="characters">
+    <h3 class="characters__title">Personajes</h3>
+    <ul class="characters__list">
+      <li>
+        <img class="characters__list__img" src="" alt="Imagen personaje">
+        <h4>Nombre personaje</h4>
+      </li>
+    </ul>
+  </section>
+  <aside class="favourites">
+    <h3 class="favourites__title">Favoritos</h3>
+    <ul>
+      <li class="favourites__list">
+        <img class="favourites__list__img" src="" alt="Imagen personaje">
+        <h4>Nombre personaje</h4>
+      </li>
+    </ul>
+  </aside>
 </main>
