Add Favourites List

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,8 +3,8 @@
   <div class="header__img">
     <img class="header__img__content" src="./images/castillo.jpg" alt="Fotografía del castillo de Disney">
   </div>
-  <form class="header__form" action="">
-    <input class="header__form__input" type="text" placeholder="Ej. Mickey Mouse">
-    <button class="header__form__btn">Buscar</button>
+  <form class="header__form js__form" action="">
+    <input class="header__form__input js__form__input" type="text" placeholder="Ej. Mickey Mouse">
+    <button class="header__form__btn ">Buscar</button>
   </form>
 </header>
