--- a/src/scss/layout/_main_page.scss
+++ b/src/scss/layout/_main_page.scss
@@ -17,7 +17,29 @@
     &__list {
         font-family: $font-main;
         font-size: 18px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 20px;
+        padding: 40px;
+        list-style: none;
+        width: 100%;
+        &__item {
+            text-align: center;
+            border: 2px solid $color-bg;
+            border-radius: 5px;
+            padding: 10px;
+        }
+        &__name {
+            padding-top: 5px;
+        }
+        &__img {
+            height: 120px;
+            width: auto;
+            border-radius: 5px;
+
+        }
     }
+   
 }
 
 .favourites {
@@ -32,5 +54,14 @@
     &__list {
         font-family: $font-main;
         font-size: 18px;
+        display: grid;
+        grid-template-columns: 1fr ;
+        gap: 20px;
+        padding: 40px 20px;
+        list-style: none;
     }
+}
+
+.selected {
+    background-color: pink;
 }
