add delete all option

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -10,5 +10,9 @@
     <ul class="favourites__list js__charactersSelectedUl">
 
     </ul>
+
+    <button class="deleteAll js__deleteAllCharacters">
+      <p class="deleteAll__text">Eliminar todos</p>
+    </button>
   </aside>
 </main>
