--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -7,10 +7,13 @@
   </section>
   <aside class="favourites">
     <h3 class="favourites__title">Favoritos</h3>
-    <ul class="favourites__list js__charactersSelectedUl">
+    <ul class="favourites__list hidden js__charactersSelectedUl">
 
     </ul>
 
+    <p class="favourites__text js__favouritesEmptyText">Selecciona tus personajes favoritos para que aparezcan en esta
+      lista.
+    </p>
     <button class="deleteAll js__deleteAllCharacters">
       <p class="deleteAll__text">Eliminar todos</p>
     </button>
