--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -14,8 +14,9 @@
     <p class="favourites__text js__favouritesEmptyText">Selecciona tus personajes favoritos para que aparezcan en esta
       lista.
     </p>
-    <button class="deleteAll js__deleteAllCharacters">
+    <button class="button js__deleteAllCharacters">
       <p class="deleteAll__text">Eliminar todos</p>
     </button>
+    <button class="button js__log">LOG</button>
   </aside>
 </main>
